@@ -78,6 +78,7 @@ Version 1.3.1+svn:
      now protected by asserts so there might be more crashes instead of silent
      memory corruptions (bug #8715 and bug #8756)
    * fixed beginning-of-scenario saves containing scenario WML (bug #8698)
+   * fixed "End Turn" button clickable after Ctrl-F (bug #6556)
    * fixed autosaves not getting deleted for last campaign scenario and
      multiplayer (bug #8762)
    * Performance : wml compression is done in the helper threads instead of
